# CUDAPathtracer

./: CMakeLists.txt  README.md
scenes/: test.json
src/: CMakeLists.txt  app.cpp  app.h  globals.h  la.h  main.cu
src/io/: sceneloader.h  tiny_obj_loader.h
src/pathtracing/: pathtracer.cu  pathtracer.cuh
src/pathtracing/raytracing/: intersection.cu  intersection.cuh  ray.cu  ray.cuh
src/pathtracing/scene/: camera.cu  camera.cuh  scene.cu  scene.cuh  sceneStructs.h  transform.cu  transform.cuh
src/pathtracing/scene/geometry/: shape.cu  shape.cuh  sphere.cu  sphere.cuh
src/ui/: ui.cpp  ui.h
